# fallible

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
examples/: CMakeLists.txt  main.cpp
fallible/: CMakeLists.txt
fallible/context/: attrs.hpp  context.cpp  context.hpp  fwd.hpp  location.cpp  location.hpp  make.hpp  tags.hpp
fallible/error/: codes.cpp  codes.hpp  error.cpp  error.hpp  fwd.hpp  make.cpp  make.hpp  throw.hpp
fallible/result/: fwd.hpp  ignore.hpp  make.cpp  make.hpp  mappers.hpp  result-inl.hpp  result.hpp  type_traits.hpp
fallible/rt/: abort.cpp  abort.hpp  panic.cpp  panic.hpp  panicker.cpp  panicker.hpp
tests/: CMakeLists.txt  all.cpp  context.cpp  error.cpp  result.cpp
wheels/: CMakeLists.txt
wheels/error/: codes.cpp  codes.hpp  error.cpp  error.hpp  throw.hpp
wheels/result/: error.cpp  error.hpp  error_codes.hpp  make.cpp  make.hpp  result.hpp  throw.hpp
